--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -5,7 +5,7 @@ on: #[push]
   workflow_dispatch:
   schedule:
     - cron: "40 21 * * *"
-permissions: write-all
+#permissions: write-all
 jobs:
   linkChecker:
     runs-on: ubuntu-latest
