--- a/.github/workflows/link_check.yml
+++ b/.github/workflows/link_check.yml
@@ -1,10 +1,10 @@
 name: Links
 
-on: [push]
-  #repository_dispatch:
-  #workflow_dispatch:
-  #schedule:
-    #- cron: "00 19 * * *"
+on: #[push]
+  repository_dispatch:
+  workflow_dispatch:
+  schedule:
+    - cron: "00 19 * * *"
 permissions: write-all
 jobs:
   linkChecker:
